add issue components

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -26,5 +26,9 @@
   </div>
 </nav>
 
-
 <app-my-component></app-my-component>
+
+<app-index></app-index>
+<app-issue-list></app-issue-list>
+<app-issue-detail></app-issue-detail>
+<app-issue-form></app-issue-form>
