--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -17,18 +17,14 @@
     [ngbCollapse]="isCollapsed">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">List issues</a>
+        <a class="nav-link" href="#"  routerLink="/issues">List issues</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">New issue</a>
+        <a class="nav-link" href="#"  routerLink="/issues/new" >New issue</a>
       </li>
     </ul>
   </div>
 </nav>
 
-<app-my-component></app-my-component>
+<router-outlet></router-outlet>
 
-<app-index></app-index>
-<app-issue-list></app-issue-list>
-<app-issue-detail></app-issue-detail>
-<app-issue-form></app-issue-form>
