--- a/src/app/components/issue-list/issue-list.component.html
+++ b/src/app/components/issue-list/issue-list.component.html
@@ -1,5 +1,5 @@
 <h2 class="display-2 my-3">My issues</h2>
-<p><a class="btn btn-primary" href="#" role="button">New issue</a></p>
+<p><a class="btn btn-primary" href="#" routerLink="/issues/new" role="button">New issue</a></p>
 <div class="list-group">
   <a
     href="#"
