--- a/src/app/components/issue-list/issue-list.component.html
+++ b/src/app/components/issue-list/issue-list.component.html
@@ -1,5 +1,9 @@
 <h2 class="display-2 my-3">My issues</h2>
 <p><a class="btn btn-primary" href="#" routerLink="/issues/new" role="button">New issue</a></p>
+
+<app-status-filter [status]="selectedStatus" (filterChanged)="onFilterChanged($event)" ></app-status-filter>
+
+
 <div class="list-group">
   <a *ngFor="let issue of issues"
     href="#"
