--- a/src/app/components/issue-form/issue-form.component.html
+++ b/src/app/components/issue-form/issue-form.component.html
@@ -2,7 +2,7 @@
 
 {{ issue | json }}
 
-<form action="" novalidate>
+<form action="" #issueForm="ngForm">
   <div class="form-group">
     <label for="title">Title</label>
     <input
@@ -11,6 +11,8 @@
       id="title"
       placeholder="Title"
       required
+      name="title"
+      [(ngModel)]="issue.title"
     />
     <div class="invalid-feedback">Please provide a title!</div>
   </div>
@@ -21,6 +23,8 @@
       id="description"
       rows="5"
       required
+      name="description"
+      [(ngModel)]="issue.description"
     ></textarea>
     <div class="invalid-feedback">Please provide a description!</div>
   </div>
@@ -32,12 +36,18 @@
       id="place"
       placeholder="Place"
       required
+      name="place"
+      pattern="^PC\d+$"
+      [(ngModel)]="issue.place"
     />
     <div class="invalid-feedback">Please provide a place!</div>
   </div>
   <div class="form-group">
     <label for="status">Status</label>
-    <select class="form-control" id="status" required>
+    <select class="form-control" id="status" required
+      name="status"
+      [(ngModel)]="issue.status"
+    >
       <option value="NEW">New</option>
       <option value="DOING">Doing</option>
       <option value="DONE">Done</option>
@@ -45,5 +55,5 @@
     <div class="invalid-feedback">Please provide a status!</div>
   </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary" [disabled]="!issueForm.valid">Submit</button>
 </form>
