--- a/src/app/components/issue-list/issue-list.component.html
+++ b/src/app/components/issue-list/issue-list.component.html
@@ -9,11 +9,15 @@
     [class.list-group-item-danger]="issue.status === 'NEW'"
     [class.list-group-item-warning]="issue.status === 'DOING'"
     [class.list-group-item-success]="issue.status === 'DONE'"
-    (click)="selectedIssue = issue"
+    [routerLink]="['/issues', issue.id]"
   >
     <div class="d-flex w-100 justify-content-between align-items-center">
       <h5 class="mb-1">{{ issue.title }}</h5>
-      <span class="badge badge-danger">{{ issue.status }}</span>
+      <span class="badge"
+        [class.badge-danger]="issue.status === 'NEW'"
+        [class.badge-warning]="issue.status === 'DOING'"
+        [class.badge-success]="issue.status === 'DONE'"
+      >{{ issue.status }}</span>
     </div>
     <p class="mb-1">
       {{ issue.description }}
@@ -26,7 +30,3 @@
     </small>
   </a>
 </div>
-
-<app-issue-form *ngIf="selectedIssue" [issue]="selectedIssue" (save)="onSave($event)">
-
-</app-issue-form>
