--- a/src/app/components/issue-detail/issue-detail.component.html
+++ b/src/app/components/issue-detail/issue-detail.component.html
@@ -20,6 +20,6 @@
 </dl>
 
 <p>
-  <a class="btn btn-primary" href="#" role="button" [routerLink]="['/issues', issue.id, 'edit']">Edit</a>
-  <a class="btn btn-outline-danger" href="#" role="button">Delete</a>
+  <a class="btn btn-primary" role="button" [routerLink]="['/issues', issue.id, 'edit']">Edit</a>
+  <a class="btn btn-outline-danger" (click)="onDeleteClick()" role="button">Delete</a>
 </p>
